<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_waypoint_follower</name>
  <version>0.0.1</version>
  <description>A GPS waypoint follower for nav2</description>
  <maintainer email="timothy.tan.93@gmail.com">Timothy Tan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_common</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>nav2_core</depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
